agrego codigo a productdetail.html

--- a/views/productdetail.html
+++ b/views/productdetail.html
@@ -19,7 +19,9 @@
         <div>
             <i class="fas fa-map-marker-alt"></i>
             <span>Opciones de entrega</span>
-            <i class="fas fa-angle-down"></i>
+            <button class="decrease">
+                v
+            </button>
         </div>
     </header>
     <main>
@@ -29,11 +31,18 @@
                 <h5>Número de producto:</h5>
             </div>
             <div>
-
+                <p>Aquí va el carrusel de imagenes</p>
+            </div>
+            <div>
+                <h3>$Precio</h3>
+                <i class="fas fa-info"></i>
+                <span>Más información del producto</span>
             </div>
     </main>
     <footer>
-
+        <div>
+            <h2>Agregar al Carrito</h2>
+        </div>
     </footer>
 </body>
 
