--- a/views/login.html
+++ b/views/login.html
@@ -7,9 +7,17 @@
     <title>Login</title>
 </head>
 <body>
-    <h1>Bienvenido ingrese a su cuenta</h1>
+    <h1>Bienvenido a ElectroArco</h1>
 <h2>porfavor ingrese su usuario</h2>
+<div></div>
+<h3>Ingrese su cuenta</h3>
+<div></div>
+<h3>Ingrese su contraseña</h3>
+<div></div>
+<h3>olvidaste tu contraseña?</h3>
+<div></div>
+<h3>sino tienes una , has click aca</h3>
 
-    
+
 </body>
 </html>
