--- a/views/login.html
+++ b/views/login.html
@@ -5,9 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=>, initial-scale=1.0">
     <title>Login</title>
+    <link rel="stylesheet" href="/css/Login.css">
 </head>
 <body>
-    <h1>Bienvenido a ElectroArco</h1>
+    <h1 id="gigante">Bienvenido a ElectroArco</h1>
 <h2>porfavor ingrese su usuario</h2>
 <div></div>
 <h3>Ingrese su cuenta</h3>
