--- a/views/login.html
+++ b/views/login.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="/css/Login.css">
 </head>
 <body>
-    <h1 id="gigante">Bienvenido a Electro Arco</h1>
+    <h1>Bienvenido a Electro Arco</h1>
 <h2>porfavor ingrese su usuario</h2>
 <div></div>
 <h3>Ingrese su cuenta</h3>
