Se modifica el register html y css

--- a/views/register.html
+++ b/views/register.html
@@ -10,6 +10,7 @@
 <body>
     <h1>ElectoArco</h1>
     <div class="cabecera">
+        <div class="imgLogo"><img src="images/logo.svg" alt="Logo electro arco"></div>
         <div class="cabecera-botones">
             <div class="botones">
                 <div class="botonHome"><button type="submit">Home</button></div>
