--- a/public/css/register.css
+++ b/public/css/register.css
@@ -5,12 +5,16 @@ h1{
     text-align: center;
 }
 .cabecera{
-    
+    width:100%;
     border-radius: 10px;
     display: flex;
-    width: 100%;
     height: 50px;
     justify-content: right;
+}
+.imgLogo{
+    width: 30%;
+    height:100px;
+    display: flex;
 }
 .botones{
     display: flex;
@@ -86,6 +90,12 @@ input{
     .cabecera-botones{
         display: none;
     }
+    .imgLogo{
+        width: 80%;
+        height: 50px;
+        justify-content: left;
+        
+    }
     .burger-menu{
         display:flex;
     }
@@ -102,8 +112,6 @@ input{
         border-radius: 5px;  
         margin-right: 10px;  
     }
-    
-    
     .nombre, .apellido,.correo, .contrasena{
         width: 100%;
         padding: 30px;
