--- a/views/productdetail.html
+++ b/views/productdetail.html
@@ -52,7 +52,7 @@
             <i class="fas fa-map-marker-alt"></i>
             <span class="deliveryopt">Opciones de entrega</span>
             <div>
-                <select class="select">
+                <select class="select1">
                     <option value="value0">-Selecciona-</option>
                     <option value="value1">Envío a tu dirección</option>
                     <option value="value2">Recoge en tienda</option>
@@ -66,7 +66,7 @@
             <p class="subtitle">Nombre del producto</p>
             <p class="other">Número de producto:</p>
         </section>
-        <section class="productimage"><!--<img src="images/product image.jpg" alt="aquívalaimagendelproducto">-->
+        <section class="productimage">
             <div id="conteItemsCarrusel">
                 <div class="itemCarrusel" id="itemCarrusel-1">
                     <div class="tarjetaCarrusel" id="tarjetaCarrusel-1">
@@ -126,51 +126,73 @@
             </div>
         </section>
         <section class="box1-2">
-            <img src="images/product image.jpg" alt="aquívalaimagendelproducto">
+            <div class="Carrusel"><img src="images/product image.jpg" alt="aquívalaimagendelproducto"></div>
             <div id="box1-2-1">
-                <p>Nombre del producto</p>
-                <p>Número del producto:</p>
+                <p class="subtitle">Nombre del producto:</p>
+                <p class="other">Número del producto:</p>
             </div>
             <div id="box1-2-2">
-                <p class="price">Precio</p>
-                <div id="cantadd">
-                    <select class="select">
-                        <option value="value0">1</option>
-                        <option value="value1">2</option>
-                        <option value="value2">3</option>
-                        <option value="value2">4</option>
-                        <option value="value2">5</option>
-                    </select>
-                    <button name="add">
-                        <p>Agregar al Carrito</p>
-                    </button>
-                    <p>Opciones de entrega</p>
-                    <label>
-                        <input type="radio" name="opcentrega" value="Envío a tu dirección"><i id="truck2"><i
-                                class="fas fa-truck"></i></i>Envío a tu dirección
-                    </label>
-                    <label>
-                        <input type="radio" name="opcentrega" value="Recoge en la tienda"><i
-                            class="fas fa-shopping-bag"></i></i>Recoge en la tienda
-                    </label>
-                    <p>Disponibilidad en tienda</p>
-                    <i class="fas fa-store"></i></i>
-                    <p>Seleccionar tienda</p>
+                <div id="addbag">
+                    <p class="price">Precio</p>
+                    <div id="cantadd">
+                        <select class="select">
+                            <option value="value0">1</option>
+                            <option value="value1">2</option>
+                            <option value="value2">3</option>
+                            <option value="value2">4</option>
+                            <option value="value2">5</option>
+                        </select>
+                        <button name="add">
+                            <p>Agregar al Carrito</p>
+                        </button>
+                    </div>
+                    <p id="opcent">Opciones de entrega</p>
+                    <div class="labels">
+                        <div>
+                            <label>
+                                <input type="radio" name="opcentrega" value="Envío a tu dirección"><i id="truck2"><i
+                                        class="fas fa-truck"></i></i>Envío a tu dirección
+                            </label>
+                        </div>
+                        <div>
+                            <label>
+                                <input type="radio" name="opcentrega" value="Recoge en la tienda"><i
+                                    class="fas fa-shopping-bag"></i></i>Recoge en la tienda
+                            </label>
+                        </div>
+                    </div>
+                    <div id="dispon">
+                        <p>Disponibilidad en tienda</p>
+                    </div>
+                    <div id="selectstore">
+                        <div><i class="fas fa-store"></i></i></div>
+                        <div>
+                            <p>Seleccionar tienda</p>
+                        </div>
+                    </div>
                 </div>
             </div>
-            <div id="box1-2-3">
-                <p>Caracteristicas Importantes</p>
-                <ul>
-                    <li>Item 1</li>
-                    <li>Item 2</li>
-                    <li>Item 3</li>
-                </ul>
+            <div id="caracteristicasyresumen">
+                <div id="box1-2-3">
+                    <p id="caracteristicas">Caracteristicas Importantes</p>
+                    <ul>
+                        <li>Item 1</li>
+                        <li>Item 2</li>
+                        <li>Item 3</li>
+                    </ul>
+                </div>
+                <div id="box1-2-4">
+                    <p id="text1">Resumen del producto</p>
+                    <p id="text2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis ornare, tellus eu
+                        interdum auctor,
+                        ante
+                        eros tincidunt libero, et rutrum arcu erat vel nulla. Maecenas eu vulputate odio, lacinia ornare
+                        urna.</p>
+                </div>
             </div>
-            <div id="box1-2-4">
-                <p id="text1">Resumen del producto</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis ornare, tellus eu interdum auctor, ante
-                    eros tincidunt libero, et rutrum arcu erat vel nulla. Maecenas eu vulputate odio, lacinia ornare
-                    urna.</p>
+            <div id="moreinfo">
+                <i id="circle"><i class="fas fa-info-circle"></i></i>
+                <p>Más información del producto</p>
             </div>
         </section>
     </main>
@@ -179,6 +201,44 @@
             <button name="add"><a href="#">
                     <p>Agregar al Carrito</p>
                 </a></button>
+        </section>
+        <section class="pieDePagina">
+            <div id="pieDePagina1">
+                <div id="pieDePagina1-1">
+                    <i class="far fa-question-circle"></i>
+                    <p id="questions">Preguntas frecuentes</p>
+                </div>
+                <p id="questions1">Heading</p>
+                <p id="questions2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis ornare, tellus eu
+                    interdum auctor,
+                    ante
+                    eros tincidunt libero, et rutrum arcu erat vel nulla. Maecenas eu vulputate odio, lacinia ornare
+                    urna.</p>
+            </div>
+            <div id="pieDePagina2">
+                <div id="pieDePagina2-1">
+                    <i class="far fa-compass"></i>
+                    <p id="retiroEnvio">Métodos de retiro y envío</p>
+                </div>
+                <p id="retiroEnvio1">Heading</p>
+                <p id="retiroEnvio2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis ornare, tellus eu
+                    interdum auctor,
+                    ante
+                    eros tincidunt libero, et rutrum arcu erat vel nulla. Maecenas eu vulputate odio, lacinia ornare
+                    urna.</p>
+            </div>
+            <div id="pieDePagina3">
+                <div id="pieDePagina3-1">
+                    <i class="fas fa-shield-alt"></i>
+                    <p id="politicas">Nuestras politicas</p>
+                </div>
+                <p id="politicas1">Heading</p>
+                <p id="politicas2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis ornare, tellus eu
+                    interdum auctor,
+                    ante
+                    eros tincidunt libero, et rutrum arcu erat vel nulla. Maecenas eu vulputate odio, lacinia ornare
+                    urna.</p>
+            </div>
         </section>
     </footer>
 </body>
