--- a/views/login.html
+++ b/views/login.html
@@ -10,13 +10,17 @@
 <body>
     <h1>Bienvenido a Electo Arco</h1>
 <h2>porfavor ingrese su usuario</h2>
-<div></div>
-<h3>Ingrese su cuenta</h3>
-<div></div>
-<h3>Ingrese su contraseña</h3>
-<div></div>
-<h3>olvidaste tu contraseña?</h3>
-<div></div>
+<form action="" method="post">
+<div>
+<label>ingrese su cuenta</label>
+                <input type="text" name="nombreUsuario" id="nombreUsuario">
+            </div>
+<div>
+    <label>ingrese su Contraseña</label>
+                <input type="text" name="Contraseña" id="Contraseña">
+</div>
+</form>
+
 <h3>sino tienes una , has click aca</h3>
 
 
