--- a/public/css/login.css
+++ b/public/css/login.css
@@ -6,3 +6,10 @@ h1{
     color: red;
     
 }
+label{
+    font-size: 40px;
+    font-weight: normal;
+    text-align: center;
+    text-transform: uppercase;
+    color: red;
+}
