--- a/public/css/login.css
+++ b/public/css/login.css
@@ -3,7 +3,7 @@ h1{
     font-weight: normal;
     text-align: center;
     text-transform: uppercase;
-    color: red;
+    color: black;
     
 }
 label{
@@ -11,5 +11,5 @@ label{
     font-weight: normal;
     text-align: center;
     text-transform: uppercase;
-    color: red;
+    color: black;
 }
