--- a/views/home.html
+++ b/views/home.html
@@ -4,100 +4,163 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>ElectroArco</title>
+
     <link rel="stylesheet" href="/css/home.css">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-    <script src="https://kit.fontawesome.com/34b99c374a.js" crossorigin="anonymous"></script>
-    <title>ElectoArco</title>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" rel="stylesheet" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
 </head>
 
 <body>
-    <h1>ElectroArco</h1>
-    <div class="header">
-        <div class="menuNavegacion">
-            <div class="contenidoMenuNavegacion">
-                <div class="enviarA">
-                    <button type="submit" value="enviar a">Enviar a</button>
+    <header>
+        <div class="logo"><img src="images/logo.svg" alt="Logo ElctroArco"></div>
+        <div class="header1">
+            <div class="buscarProducto">
+                <input type="search" placeholder="Buscar productos,marcas" class="input-control2">
+            </div>
+
+            <div class="compra">
+                <i class="fa-solid fa-truck"></i> Envío gratis en referencias seleccionadas
+            </div>
+            <form action="" class="search">
+                <div class="opcionesMenu">
+                    <ul class="menuHeader">
+                        <li>Ofertas</li>
+                        <li>Tiendas Oficiales</li>
+                        <li>Vender</li>
+                        <li>Ayuda</li>
+                    </ul>
+
+                    <ul class="menuHeader">
+                        <li><a href="/register">Crea tu cuenta</a><i class="fa-solid fa-address-card"></i></li>
+                        <li><a href="/login">Ingresá</a><i class="fa-solid fa-right-to-bracket"></i></li>
+                        <li>Mis compras <i class="fa-sharp fa-solid fa-basket-shopping"></i></li>
+                    </ul>
                 </div>
-                <div class="productos">
-                    <button type="menu" value="productos">Productos</button>
+                <div class="burger-menu">
+                    <i class="fas fa-bars"></i>
                 </div>
-                <div class="buscar">
-                    <input type="text" placeholder="¿Qué estas buscando?" value="buscar">
+        </div>
+        </form>
+    </header>
+    <div class="banner"><img src="images/img-home-banner.jpg"></div>
+
+    <main>
+        <h2>Basado en las últimas visitas</h2>
+        <div class="ofertas">
+            <div class="ofertasBloques">
+                <div class="bloque1">
+                <div class="articulo-horno">
+                    <div class="horno"><img src="images/horno.jpeg"></div>
+                    <div class="relative-horno">
+                        <div class="img-envio"><i class="fa-solid fa-truck"></i></div>
+                            <div class="precio-descuento">
+                                <div class="precios">$6.770</div>
+                                <div class="desc">40% OFF</div>
+                            </div>
+                        <div class="descripcion">Horno microondas</div>
+                    </div>
                 </div>
-                <div class="usuario">
-                    <button type="menu" value="usuario">Usuario</button>
+
+                <div class="articulo-laptop">
+                    <div class="laptop"><img src="images/laptop.jpg"></div>
+                    <div class="relative-laptop">
+                        <div class="img-envio"><i class="fa-solid fa-truck"></i></div>
+                            <div class="precio-descuento">
+                                <div class="precios">$230.000</div>
+                                <div class="desc">20% off</div>
+                            </div>
+                        <div class="descripcion">Laptop Pro 2019</div>
+                    </div>
                 </div>
-                <div class="misCompras">
-                    <button type="submit" value="misCompras">Mis compras</button>
+            </div>
+            <div class="bloque2">
+                <div class="articulo-samsung">
+                    <div class="samsung"><img src="images/img-samsung-galaxy-s10.jpg"></div>
+                    <div class="relative-samsung">
+                        <div class="img-envio"><i class="fa-solid fa-truck"></i></div>
+                        <div class="precio-descuento">
+                            <div class="precios">$70.500</div>
+                            <div class="desc">10% off</div>
+                        </div>
+                        <div class="descripcion">Samsung Galaxy S10</div>
+                    </div>
                 </div>
-                <div class="shoppingCart">
-                    <i class="fas fa-shopping-cart"></i>
+                <div class="articulo-tv">
+                    <div class="tv"><img src="images/img-tv-samsung-smart.jpg"></div>
+                    <div class="relative-tv">
+                        <div class="img-envio"><i class="fa-solid fa-truck"></i></div>
+                        <div class="precio-descuento">
+                            <div class="precios">$23.200</div>
+                            <div class="desc">5% off</div>
+                        </div>
+                        <div class="descripcion">SmartTv Samsung 43"</div>
+                    </div>
                 </div>
             </div>
-            <div class="menuHamburguesa">
-                <i class="fas fa-bars"></i>
+        </div>
+
+
+            <h2>Ofertas</h2>
+            <div class="ofertasBloques">
+                <div class="bloque1">
+                    <div class="articulo-horno">
+                        <div class="horno"><img src="images/horno.jpeg"></div>
+                        <div class="relative-horno">
+                            <div class="img-envio"><i class="fa-solid fa-truck"></i></div>
+                            <div class="precio-descuento">
+                                <div class="precios">$6.770</div>
+                                <div class="desc">40% OFF</div>
+                            </div>
+                            <div class="descripcion">Horno microondas</div>
+                        </div>
+                    </div>
+
+                    <div class="articulo-laptop">
+                        <div class="laptop"><img src="images/laptop.jpg"></div>
+                        <div class="relative-laptop">
+                            <div class="img-envio"><i class="fa-solid fa-truck"></i></div>
+                            <div class="precio-descuento">
+                                <div class="precios">$230.000</div>
+                                <div class="desc">20% off</div>
+                            </div>
+                            <div class="descripcion">Laptop Pro 2019</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="bloque2">
+                    <div class="articulo-samsung">
+                        <div class="samsung"><img src="images/img-samsung-galaxy-s10.jpg"></div>
+                        <div class="relative-samsung">
+                            <div class="img-envio"><i class="fa-solid fa-truck"></i></div>
+                            <div class="precio-descuento">
+                                <div class="precios">$70.500</div>
+                                <div class="desc">10% off</div>
+                            </div>
+                            <div class="descripcion">Samsung Galaxy S10</div>
+                        </div>
+                    </div>
+                    <div class="articulo-tv">
+                        <div class="tv"><img src="images/img-tv-samsung-smart.jpg"></div>
+                        <div class="relative-tv">
+                            <div class="img-envio"><i class="fa-solid fa-truck"></i></div>
+                            <div class="precio-descuento">
+                                <div class="precios">$23.200</div>
+                                <div class="desc">5% off</div>
+                            </div>
+                            <div class="descripcion">SmartTv Samsung 43"</div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
-        <div class="menuNavegacion1">
-            <div class="ofertas">
-                <button type="menu" value="ofertas">OFERTAS<i class="fas fa-chevron-down"></i></button>
-            </div>
-            <div class="atencionAlCliente">
-                <button type="menu" value="atencionAlCliente">ATENCION AL CLIENTE<i
-                        class="fas fa-chevron-down"></i></button>
-            </div>
-            <div class="vender">
-                <button type="menu" value="vender">VENDER<i class="fas fa-chevron-down"></i></button>
-            </div>
-        </div>
-        <div class="carrusel">
-            <img src="images/product image.jpg" alt="carrusel">
-        </div>
-        <div class="divCarrusel">
-            <div class="carrusel1">
-                <img src="images/product image.jpg" alt="carrusel">  
-                <p>Relacionado con tu última busqueda</p>
-            </div>
-            <div class="carrusel2">
-                <img src="images/product image.jpg" alt="carrusel">
-                <p>Mejores vendidos</p>
-            </div>
-            <div class="carrusel3">
-                <img src="images/product image.jpg" alt="carrusel">
-                <p>Descubrí productos</p>
-            </div>
-        </div>
-    </div>
-        <div>
-            <p>Sobre nosotros</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab autem ipsum totam veniam, provident tempora, velit corporis reprehenderit sapiente qui accusamus ad. Velit iste nam ea voluptatem, possimus dolorum eligendi!</p>
-        </div>
-        <div>
-            <p>Redes</p>
-            <div>
-                <i class="fab fa-instagram"></i>
-            </div>
-            <div>
-                <i class="fab fa-facebook-square"></i>
-            </div>
-            <div>
-                <i class="fab fa-twitter-square"></i>
-            </div>
-        </div>
-        <div>
-            <p>Contactanos</p>
-            <div>
-                <i class="fas fa-envelope"></i>servicioalclienteelectroarco@gmail.com
-            </div>
-            <div>
-                <i class="fas fa-phone-office"></i>+000 000 0000
-            </div>
-            <div>
-                <i class="fab fa-whatsapp-square"></i>
-            </div>
-        </div>
+    </main>
+    <footer>
+
+    </footer>
 </body>
 
 </html>
